[package]
name = "minecraft-varint"
version = "0.1.1"
authors = ["luojia65 <me@luojia.cc>", "belohnung <belohnung@protonmail.com>"]
description = "Minecraft's VarInt and VarLong implemetation in Rust, providing minimum memory usage and maximum performance."
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/belohnung/minecraft-varint"
documentation = "https://docs.rs/minecraft-varint"
keywords = ["minecraft"]

[dependencies]
